unpackaged/main/default/objects/TypeIdentifiantNational__c/TypeIdentifiantNational__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Type Identifiant National</label>
</CustomObject>