unpackaged/main/default/objects/TypeIdentifiantNational__c/fields/CodePays__c.field-meta.xml
<CustomField>
    <fullName>CodePays__c</fullName>
    <label>Code Pays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>