unpackaged/main/default/objects/TypeIdentifiantNational__c/fields/Libelle_fr__c.field-meta.xml
<CustomField>
    <fullName>Libelle_fr__c</fullName>
    <label>Libelle_fr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>