unpackaged/main/default/objects/TypeIdentifiantNational__c/fields/LibelleFr__c.field-meta.xml
<CustomField>
    <fullName>LibelleFr__c</fullName>
    <label>LibelléFr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>