unpackaged/main/default/objects/TypeIdentifiantNational__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>CodePays__c</columns>
    <columns>Code__c</columns>
    <columns>LibelleFr__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>